# cmake_learning

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: CMakeLists.txt
src/math/: CMakeLists.txt
